	  to avoid any real problems.

	o Linux binary RPMs will henceforth include only the
	  libmysqlpp.so.X.Y.Z file, and create any short names
	  required, to allow multiple versions to be installed at
	  once.  Currently, you cannot install two MySQL++ library
	  RPMs at once, because they both have /usr/lib/libmysqlpp.so.X,
	  for instance.

	o Connection::create_db() and drop_db() now return true on
	  success, not false.

	o Connection::create_db() and drop_db() use Query::exec()
	  now, for efficiency, rather than Query::execute().

	o Removed Connection::infoo().  Apparently just there to
	  save you from a typo when calling the info() method, since
	  it was a mere alias.

	o Renamed Connection::real_connect() to connect(), gave
	  several more of its parameters defaults, and removed old
	  connect() function.  Then changed user manual and examples
	  to use new APIs.

	o Replaced Connection::read_option() with new set_option()
	  mechanism.  The name change matches the method's purpose
	  better.  Functional changes are that it returns true on
	  success instead of 0, it supports a broader set of options
	  than read_option() did, and it enforces the correct option
	  argument type.

	o You can now call Connection::set_option() before the
	  connection is established, which will simply queue the option
	  request up until the connection comes up.  If you use this
	  feature, you should use exceptions, because that's the only
	  way an option setting failure can be signalled in this case.

	o Removed query-building functions (exec*(), store*(),
	  use()) from class Connection, and moved all the implementation
	  code to class Query.  Query no longer delegates the final
	  step of sending the query to the database server to
	  Connection().

	o Extracted exception disabling mechanism out of the many
	  classes that had the feature into a new OptionalExceptions
	  base class, which all classes having this feature now